pantry/config/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pantry-api
  namespace: pantry
  labels:
    app: pantry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pantry-api
  template:
    metadata:
      labels:
        app: pantry-api
    spec:
      containers:
        - name: api
          image: harbor.finalq.xyz/tools/pantry-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
