pantry/config/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry-api
  namespace: pantry
spec:
  selector:
    app: pantry-api
  ports:
    - port: 80
      targetPort: http
