pantry/config/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pantry-postgres
  namespace: pantry
spec:
  selector:
    app: pantry-postgres
  ports:
    - port: 5432
      targetPort: postgres
